--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/pom.xml
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/pom.xml
@@ -21,6 +21,7 @@
 
 	<modules>
 		<module>MobilePhoneShopBackEnd</module>
+		<module>MobilePhoneShopFrontEnd</module>
 	</modules>
 
 	<dependencies>
@@ -28,7 +29,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
