--- a/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopFrontEnd/src/main/resources/application.properties
+++ b/MobilePhoneShopProject/MobilePhoneShopWebParent/MobilePhoneShopFrontEnd/src/main/resources/application.properties
@@ -1,2 +1,11 @@
-server.port=80
+server.port=8080
 server.servlet.context-path=/MobilePhoneShop
+
+spring.datasource.url=jdbc:mysql://localhost:3306/mobile_phone_shop_db
+spring.datasource.name=root
+spring.datasource.password=admin123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
